--- a/Data_Summarization/lecture/Data_Summarization.Rmd
+++ b/Data_Summarization/lecture/Data_Summarization.Rmd
@@ -3,9 +3,9 @@ title: "Data Summarization"
 author: "Andrew Jaffe"
 date: "January 5, 2016"
 output:
+  beamer_presentation: default
   ioslides_presentation:
     css: ../../styles.css
-  beamer_presentation: default
 ---
 
 ## Data Summarization
@@ -17,11 +17,39 @@ output:
     * `quantile(x)`: displays sample quantities of x. Default is min, IQR, max
     * `range(x)`: displays the range. Same as c(min(x), max(x))
 
-* Basic summarization plots
-    * `plot(x,y)`: scatterplot of x and y
-    * `boxplot(y~x)`: boxplot of y against levels of x
-    * `hist(x)`: histogram of x
-    * `density(X)`: kernel density plot of x
+## Some examples
+
+We can use the `mtcars` and Charm City Circulator datasets to explore different ways of summarizing data.
+
+```{r}
+head(mtcars)
+```
+
+
+## Statistical summarization
+
+```{r}
+mean(mtcars$hp)
+quantile(mtcars$hp)
+```
+
+## Statistical summarization
+
+```{r}
+median(mtcars$wt)
+quantile(mtcars$wt, probs = 0.6)
+```
+
+## Statistical summarization
+
+Note that many of these functions have additional inputs regarding missing data, typically requiring the `na.rm` argument. 
+
+```{r}
+x = c(1,5,7,NA,4,2, 8,10,45,42)
+mean(x)
+mean(x,na.rm=TRUE)
+quantile(x,na.rm=TRUE)
+```
 
 ## Data Summarization on matrices/data frames
 
@@ -32,17 +60,34 @@ output:
     * `colSums(x)`: takes the sum of each column of x
     * `summary(x)`: for data frames, displays the quantile information
     
-* Basic summarization plots
-    * `matplot(x,y)`: scatterplot of two matrices, x and y
-    * `pairs(x,y)`: plots pairwise scatter plots of matrices x and y, column by column
+
+## Charm City Circulator data
+
+Please download the Charm City Circulator data:
+
+http://www.aejaffe.com/winterR_2016/data/Charm_City_Circulator_Ridership.csv
+
+```{r}
+circ = read.csv("http://www.aejaffe.com/winterR_2016/data/Charm_City_Circulator_Ridership.csv", 
+            header=TRUE,as.is=TRUE)
+```
+
+## Subsetting to specific columns
+
+Let's just take columns that represent average ridership:
+
+```{r}
+library(dplyr,quietly = TRUE)
+circ2 = select(circ, date, day, ends_with("Average"))
+```
 
 ## column and row means
 
 ```{r colMeans}
-circ2 = read.csv("../../data/charmcitycirc_reduced.csv", 
-            header=TRUE,as.is=TRUE)
-colMeans(circ2[,3:6],na.rm=TRUE)
-head(rowMeans(circ2[,3:6],na.rm=TRUE))
+avgs = select(circ2, ends_with("Average"))
+colMeans(avgs,na.rm=TRUE)
+circ2$daily = rowMeans(avgs,na.rm=TRUE)
+head(circ2$daily)
 ```
 
 ## Summary
@@ -70,10 +115,9 @@ apply(X, MARGIN, FUN, ...)
 ## Apply statements
 
 ```{r apply1}
-tmp = circ2[,3:6]
-apply(tmp,2,mean,na.rm=TRUE) # column means
-apply(tmp,2,sd,na.rm=TRUE) # columns sds
-apply(tmp,2,max,na.rm=TRUE) # column maxs
+apply(avgs,2,mean,na.rm=TRUE) # column means
+apply(avgs,2,sd,na.rm=TRUE) # columns sds
+apply(avgs,2,max,na.rm=TRUE) # column maxs
 ```
 
 ## Other Apply Statements
@@ -102,7 +146,16 @@ For example, we can estimate the highest average daily ridership for each day of
 ```{r tapply1}
 tapply(circ2$daily, circ2$day, max, na.rm=TRUE)
 ```
+    
 
+## Data Summarization
+
+* Basic summarization plots
+    * `plot(x,y)`: scatterplot of x and y
+    * `boxplot(y~x)`: boxplot of y against levels of x
+    * `hist(x)`: histogram of x
+    * `density(X)`: kernel density plot of x
+    
 ## Basic Plots
 
 Plotting is an important component of exploratory data analysis. We will review some of the more useful and informative plots here. We will go over formatting and making plots look nicer in additional lectures.
@@ -110,8 +163,7 @@ Plotting is an important component of exploratory data analysis. We will review 
 ## Scatterplot
 
 ```{r scatter1}
-data(cars)
-plot(cars$speed, cars$dist)
+plot(mtcars$mpg, mtcars$disp)
 ```
 
 ## Histograms
@@ -141,9 +193,15 @@ boxplot(circ2$daily ~ circ2$day)
 boxplot(daily ~ day, data=circ2)
 ```
 
+## Data Summarization for data.frames
+
+* Basic summarization plots
+    * `matplot(x,y)`: scatterplot of two matrices, x and y
+    * `pairs(x,y)`: plots pairwise scatter plots of matrices x and y, column by column
+
 ## Matrix plot
 
 ```{r matplot1}
-matplot(circ2[,3:6])
+matplot(avgs)
 ```
 
