--- a/Knitr/lecture/Knitr.Rmd
+++ b/Knitr/lecture/Knitr.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Title"
+title: "Knitr"
 author: "John Muschelli"
 date: "January 5, 2016"
 output:
@@ -26,6 +26,7 @@ I'm reading in the bike lanes here.
 ### let's say we loaded some packages
 library(stringr)
 library(plyr)
+library(dplyr)
 fname <- "../../data/Bike_Lanes.csv"
 bike = read.csv(fname, as.is = TRUE)
 ```
@@ -50,7 +51,6 @@ no.missyear <- bike[ bike$dateInstalled != 0,]
 plot(no.missyear$dateInstalled, no.missyear$length)
 no.missyear$dateInstalled = factor(no.missyear$dateInstalled)
 boxplot(no.missyear$length ~ no.missyear$dateInstalled, main="Boxplots of Bike Lenght by Year", xlab="Year", ylab="Bike Length")
-
 ```
 
 We have a total of `r nrow(no.missyear)` rows.
@@ -98,9 +98,12 @@ aggregate(log.length ~ type, data=no.missyear, FUN=mean)
 ## then we'll use summarise to summarize whatever we want
 ## then returns a data.frame (the second d) - hence why it's ddply
 ## if we wanted to do it on a "list" thne return data.frame, it'd be ldply
-ddply(no.missyear, .(type), summarise,
+ddply(no.missyear, .(type), plyr::summarise,
       mean=mean(log.length)
       )
+
+no.missyear %>% group_by(type) %>% 
+  dplyr::summarise(mean=mean(log.length))
 ```
 
 
