--- a/index.Rmd
+++ b/index.Rmd
@@ -32,8 +32,7 @@ Winter R 2016
 | 1  | 2016-01-04  | Module 3  | [HTML](Basic_R/lecture/Basic_R.html), [PDF](Basic_R/lecture/Basic_R.pdf), [Lab](Basic_R/lab/Basic_R_Lab.R), [Code](Basic_R/lecture/Basic_R.R) | Basic R  |
 | 1  | 2016-01-04  | Module 4  | [HTML](Data_IO/lecture/Data_IO.html), [PDF](Data_IO/lecture/Data_IO.pdf), [Lab](Data_IO/lab/Data_IO_Lab.R), [Code](Data_IO/lecture/Data_IO.R) | Data Import/Output  |
 | 2  | 2016-01-05  | Homework 2  | [HW ](HW/homework2.R)  |   |
-| 2  | 2016-01-05  | Module 5  | [HTML](Subsetting_Data_in_R/lecture/Subsetting_Data_in_R.html), [PDF](Subsetting_Data_in_R/lecture/Subsetting_Data_in_R.pdf), [Lab](Subsetting_Data_in_R/lab/Subsetting_Data_in_R
-_Lab.R), [Code](Subsetting_Data_in_R/lecture/Subsetting_Data_in_R.R) | Subsetting Data |
+| 2  | 2016-01-05  | Module 5  | [HTML](Subsetting_Data_in_R/lecture/Subsetting_Data_in_R.html), [PDF](Subsetting_Data_in_R/lecture/Subsetting_Data_in_R.pdf), [Lab](Subsetting_Data_in_R/lab/Subsetting_Data_in_R_Lab.R), [Code](Subsetting_Data_in_R/lecture/Subsetting_Data_in_R.R) | Subsetting Data |
 | 2  | 2016-01-05 | Module 6  | [HTML](Data_Summarization/lecture/Data_Summarization.html), [PDF](Data_Summarization/lecture/Data_Summarization.pdf), [Lab](Data_Summarization/lab/Data_Summarization_Lab.R), [Code](Data_Summarization/lecture/Data_Summarization.R)  | Data Summarization |
 | 2  | 2016-01-05 | Module 7  | [HTML](Knitr/lecture/Knitr.html), [PDF](Knitr/lecture/Knitr.pdf), [Lab](Knitr/lab/illusion.Rmd), [Code](Knitr/lecture/Knitr.Rmd) | Reproducible Research |
 |---|---|---|---|---|
