--- a/index.Rmd
+++ b/index.Rmd
@@ -29,12 +29,12 @@ Winter R 2016
 | 1  | 2016-01-04  | Homework 1  | [Try R](http://tryr.codeschool.com/)  | Finish all modules  |
 | 1  | 2016-01-04  | Module 1  | [HTML](Intro/lecture/Intro.html), [PDF](Intro/lecture/Intro.pdf)  | Class Introduction  |
 | 1  | 2016-01-04  | Module 2  | [HTML](RStudio/lecture/RStudio.html), [PDF](RStudio/lecture/RStudio.pdf) | R Studio  |
-| 1  | 2016-01-04  | Module 3  | [HTML](Basic_R/lecture/Basic_R.html), [PDF](Basic_R/lecture/Basic_R.pdf), [Lab](Basic_R/lab/Basic_R_Lab.R), [Code](Basic_R/lecture/Basic_R.R) | Basic R  |
-| 1  | 2016-01-04  | Module 4  | [HTML](Data_IO/lecture/Data_IO.html), [PDF](Data_IO/lecture/Data_IO.pdf), [Lab](Data_IO/lab/Data_IO_Lab.R), [Code](Data_IO/lecture/Data_IO.R) | Data Import/Output  |
+| 1  | 2016-01-04  | Module 3  | [HTML](Basic_R/lecture/Basic_R.html), [PDF](Basic_R/lecture/Basic_R.pdf), [Code](Basic_R/lecture/Basic_R.R), [Lab](Basic_R/lab/Basic_R_Lab.R), [Key](Basic_R/lab/Basic_R_Lab_Key.R) | Basic R  |
+| 1  | 2016-01-04  | Module 4  | [HTML](Data_IO/lecture/Data_IO.html), [PDF](Data_IO/lecture/Data_IO.pdf), [Code](Data_IO/lecture/Data_IO.R), [Lab](Data_IO/lab/Data_IO_Lab.R), [Key](Data_IO/lab/Data_IO_Lab_Key.R) | Data Import/Output  |
 | 2  | 2016-01-05  | Homework 2  | [HW ](HW/homework2.R)  |   |
-| 2  | 2016-01-05  | Module 5  | [HTML](Subsetting_Data_in_R/lecture/Subsetting_Data_in_R.html), [PDF](Subsetting_Data_in_R/lecture/Subsetting_Data_in_R.pdf), [Lab](Subsetting_Data_in_R/lab/Subsetting_Data_in_R_Lab.R), [Code](Subsetting_Data_in_R/lecture/Subsetting_Data_in_R.R) | Subsetting Data |
-| 2  | 2016-01-05 | Module 6  | [HTML](Data_Summarization/lecture/Data_Summarization.html), [PDF](Data_Summarization/lecture/Data_Summarization.pdf), [Lab](Data_Summarization/lab/Data_Summarization_Lab.R), [Code](Data_Summarization/lecture/Data_Summarization.R)  | Data Summarization |
-| 2  | 2016-01-05 | Module 7  | [HTML](Knitr/lecture/Knitr.html), [PDF](Knitr/lecture/Knitr.pdf), [Lab](Knitr/lab/illusion.Rmd), [Code](Knitr/lecture/Knitr.Rmd) | Reproducible Research |
+| 2  | 2016-01-05  | Module 5  | [HTML](Subsetting_Data_in_R/lecture/Subsetting_Data_in_R.html), [PDF](Subsetting_Data_in_R/lecture/Subsetting_Data_in_R.pdf), [Code](Subsetting_Data_in_R/lecture/Subsetting_Data_in_R.R),  [Lab](Subsetting_Data_in_R/lab/Subsetting_Data_in_R_Lab.R), [Lab](Subsetting_Data_in_R/lab/Subsetting_Data_in_R_Lab_Key.R)  | Subsetting Data |
+| 2  | 2016-01-05 | Module 6  | [HTML](Data_Summarization/lecture/Data_Summarization.html), [PDF](Data_Summarization/lecture/Data_Summarization.pdf), [Code](Data_Summarization/lecture/Data_Summarization.R), [Lab](Data_Summarization/lab/Data_Summarization_Lab.R), [Key](Data_Summarization/lab/Data_Summarization_Lab_Key.R)  | Data Summarization |
+| 3  | 2016-01-06 | Module 7  | [HTML](Knitr/lecture/Knitr.html), [PDF](Knitr/lecture/Knitr.pdf), [Code](Knitr/lecture/Knitr.Rmd), [Lab](Knitr/lab/illusion.Rmd) | Reproducible Research |
 |---|---|---|---|---|
 
 <!-- 
