adding all the new lectures

--- a/Statistics/lecture/Statistics.Rmd
+++ b/Statistics/lecture/Statistics.Rmd
@@ -33,7 +33,9 @@ cor(x, y = NULL, use = "everything",
 
 Like other functions, if there are NAs, you get NA as the result.  But if you specify use only the complete observations, then it will give you correlation on the non-missing data. 
 ```{r cor1, comment="",prompt=TRUE}
-load("../data/charmcirc.rda")
+destfile = tempfile(fileext = ".rda")
+download.file("http://www.aejaffe.com/winterR_2016/data/charmcirc.rda", destfile = destfile)
+load(destfile)
 cor(circ2$orangeAverage, circ2$purpleAverage)
 cor(circ2$orangeAverage, circ2$purpleAverage, use="complete.obs")
 ```
@@ -108,7 +110,10 @@ You can also use the 'formula' notation.  In this syntax, it is `y ~ x`, where `
 
 
 ```{r tt2, comment="",prompt=TRUE}
-cars = read.csv("../data/kaggleCarAuction.csv",as.is=TRUE)
+http_data_dir = "http://www.aejaffe.com/winterR_2016/data/"
+
+cars = read.csv(paste0(http_data_dir, "kaggleCarAuction.csv"),
+                as.is=TRUE)
 tt2 = t.test(VehBCost~IsBadBuy, data=cars)
 tt2$estimate
 ```
