--- a/Data_Cleaning/lecture/Data_Cleaning_better.Rmd
+++ b/Data_Cleaning/lecture/Data_Cleaning_better.Rmd
@@ -155,7 +155,7 @@ Sal = read.csv("http://www.aejaffe.com/winterR_2016/data/Baltimore_City_Employee
 * `all()` - checks if ALL are true
 
 ```{r isna}
-Sal[1:4,]
+head(Sal,2)
 any(is.na(Sal$Name)) # are there any NAs?
 ```
 
@@ -177,8 +177,9 @@ data$gender[data$gender %in%
 You can also `recode` a vector:
 
 ```{r}
-library(car)
-x = rep(c("Male", "M", "m", "f", "Female", "female" ), each = 3)
+library(car, quietly = TRUE)
+x = rep(c("Male", "M", "m", "f", "Female", "female" ), 
+        each = 3)
 car::recode(x, "c('m', 'M', 'male') = 'Male';
             c('f', 'F', 'female') = 'Female';")
 ```
@@ -372,10 +373,15 @@ Base R does not use these functions.  Here is a "translator" of the `stringr` fu
 
 ## Important Comparisons
 
-* Base R: Order is `(pattern, x)`
-* String R: Order is `(string, pattern)` aka `(x, pattern)`
-* Base R: Uses option `(fixed = TRUE)`
-* String R: Uses function `fixed(pattern)`
+Base R:
+
+* Argument order is `(pattern, x)`
+* Uses option `(fixed = TRUE)`
+
+`stringr`
+
+* Argument order is `(string, pattern)` aka `(x, pattern)`
+* Uses function `fixed(pattern)`
 
 
 
@@ -441,7 +447,7 @@ head(str_extract_all(Sal$AgencyID, "\\d"), 2)
     * Spence then capital C
 
 ```{r grepstar}
-head(grep("^Payne.*", x = Sal$Name, value = TRUE))
+head(grep("^Payne.*", x = Sal$Name, value = TRUE), 3)
 ```
 
 ```{r grepstar2}
@@ -453,7 +459,7 @@ head(grep("Spence.*C.*", x = Sal$Name, value = TRUE))
 
 ## Using Regular Expressions: `stringr`
 ```{r grepstar_stringr}
-head(str_subset( Sal$Name, "^Payne.*"))
+head(str_subset( Sal$Name, "^Payne.*"), 3)
 ```
 
 ```{r grepstar2_stringr}
@@ -478,33 +484,36 @@ order(c("1", "2", "10"))
 
 So we must change the annual pay into a numeric:
 ```{r destringSal}
+head(Sal$AnnualSalary, 4)
 head(as.numeric(Sal$AnnualSalary), 4)
 ```
 
-R didn't like the $ so it thought turned them all to `NA`.
+R didn't like the `$` so it thought turned them all to `NA`.
 
 `sub()` and `gsub()` can do the replacing part in base R.
 
 ## Replacing and subbing {.smaller}
 
-Now we can replace the `$` with nothing (used fixed=TRUE because $ means something in regular expressions):
+Now we can replace the `$` with nothing (used `fixed=TRUE` because `$` means ending):
 
 ```{r orderSal}
 Sal$AnnualSalary <- as.numeric(gsub(pattern = "$", replacement="", 
                               Sal$AnnualSalary, fixed=TRUE))
-Sal <- Sal[order(Sal$AnnualSalary,decreasing=TRUE), ] # use negative to sort descending
+Sal <- Sal[order(Sal$AnnualSalary, decreasing=TRUE), ] 
 Sal[1:5, c("Name", "AnnualSalary", "JobTitle")]
 ```
 
 ## Replacing and subbing: `stringr` {.smaller}
 
-Now we can replace the `$` with nothing (used fixed=TRUE because $ means something in regular expressions):
-
+We can do the same thing (with 2 piping operations!) in dplyr
 ```{r orderSal_stringr}
 dplyr_sal = Sal
-dplyr_sal = dplyr_sal %>% mutate( AnnualSalary = AnnualSalary %>%
-                       str_replace(fixed("$"), "") %>%
-                         as.numeric) %>%
+dplyr_sal = dplyr_sal %>% mutate( 
+  AnnualSalary = AnnualSalary %>%
+    str_replace(
+      fixed("$"), 
+      "") %>%
+    as.numeric) %>%
   arrange(desc(AnnualSalary))
 check_Sal = Sal
 rownames(check_Sal) = NULL
@@ -521,15 +530,14 @@ all.equal(check_Sal, dplyr_sal)
 * `rbind`/`cbind` - row/column bind, respectively
     * `rbind` is the equivalent of "appending" in Stata or "setting" in SAS
     * `cbind` allows you to add columns in addition to the previous ways
-* `reshape2` package also has a lot of information about different ways to reshape data (wide to long, etc) - but has a different (and sometimes more intuitive syntax)
 * `t()` is a function that will transpose the data
 
 ## Merging {.smaller}
 ```{r merging}
-base <- data.frame(id=1:10, Age= seq(55,60, length=10))
+base <- data.frame(id = 1:10, Age= seq(55,60, length=10))
 base[1:2,]
-visits <- data.frame(id=rep(1:8, 3), visit= rep(1:3, 8),
-                    Outcome= seq(10,50, length=24))
+visits <- data.frame(id = rep(1:8, 3), visit= rep(1:3, 8),
+                    Outcome=  seq(10,50, length=24))
 visits[1:2,]
 ```
 
