--- a/Data_Cleaning/lecture/Data_Cleaning.Rmd
+++ b/Data_Cleaning/lecture/Data_Cleaning.Rmd
@@ -8,6 +8,12 @@ output:
     css: ../../styles.css
 ---
 
+
+```{r, echo = FALSE}
+library(knitr)
+opts_chunk$set(comment = "")
+```
+
 ## Data
 
 * We will be using multiple data sets in this lecture:
@@ -26,7 +32,9 @@ MOST IMPORTANT RULE - LOOK AT YOUR DATA!
 Again - `table`, `summarize`, `is.na`, `any`, `all` are useful.
 
 
-## Missing data
+# Dealing with Missing Data
+
+## Missing data types
 One of the most important aspects of data cleaning is missing values.  
 
 Types of "missing" data:
@@ -50,7 +58,7 @@ Each missing data type has a function that returns `TRUE` if the data is missing
 One important aspect (esp with subsetting) is that logical operations return `NA` for `NA` values.  Think about it, the data could be `> 2` or not we don't know, 
 so `R` says there is no `TRUE` or `FALSE`, so that is missing:
 ```{r}
-x = c(0, 1, 2, 3, NA, 3, 3, 2,2, 3)
+x = c(0, NA, 2, 3, 4)
 x > 2
 ```
 
@@ -69,10 +77,21 @@ x > 2 & !is.na(x)
 What about seeing if a value is equal to multiple values?  You can do `(x == 1 | x == 2) & !is.na(x)`, but that is not efficient.  Introduce the `%in%` operator:
 
 ```{r}
-(x == 1 | x == 2) # has NA
-(x == 1 | x == 2) & !is.na(x) # No NA
-x %in% c(1, 2) # NEVER has NA and returns logical
+(x == 0 | x == 2) # has NA
+(x == 0 | x == 2) & !is.na(x) # No NA
+x %in% c(0, 2) # NEVER has NA and returns logical
 ```
+
+## Missing Data with Operations
+
+Similarly with logicals, operations/arithmetic with `NA` will result in `NA`s:
+
+```{r}
+x + 2
+x * 2
+```
+ 
+# Tables and Tabulations
 
 ## Creating One-way Tables {.smaller}
 
@@ -80,8 +99,7 @@ Here we will use `table` to make tabulations of the data.   Look at `?table` to 
 
 ```{r table}
 table(x)
-table(x, 
-        useNA = "ifany")
+table(x, useNA = "ifany")
 ```
 
 
@@ -93,12 +111,11 @@ table(c(0, 1, 2, 3, 2, 3, 3, 2,2, 3),
         useNA = "always")
 ```
 
-## Data Cleaning {.smaller}
+## Creating Two-way Tables {.smaller}
 
 A two-way table.  If you pass in 2 vectors, `table` creates a 2-dimensional table.
 
 ```{r}
-
 tab <- table(c(0, 1, 2, 3, 2, 3, 3, 2,2, 3), 
              c(0, 1, 2, 3, 2, 3, 3, 4, 4, 3), 
               useNA = "always")
@@ -112,7 +129,7 @@ tab <- table(c(0, 1, 2, 3, 2, 3, 3, 2,2, 3),
 margin.table(tab, 2)
 ```
 
-## Data Cleaning {.smaller}
+## Proportion Tables {.smaller}
 
 `prop.table` finds the marginal proportions of the table. Think of it dividing the table by it's respective marginal totals.  If `margin` not set, divides by overall total.
 
@@ -126,45 +143,48 @@ prop.table(tab,1)
 From https://data.baltimorecity.gov/City-Government/Baltimore-City-Employee-Salaries-FY2014/2j28-xzd7
 http://www.aejaffe.com/winterR_2016/data/Baltimore_City_Employee_Salaries_FY2014.csv
 
-Read the CSV into R `Sal`
+Read the CSV into R `Sal`:
 
 ```{r readSal}
 Sal = read.csv("http://www.aejaffe.com/winterR_2016/data/Baltimore_City_Employee_Salaries_FY2014.csv",
                as.is = TRUE)
 ```
 
-## Data Cleaning {.smaller}
+## Checking for logical conditions {.smaller}
 * `any()` - checks if there are any `TRUE`s
 * `all()` - checks if ALL are true
 
 ```{r isna}
-Sal[1:4,]
+head(Sal,2)
 any(is.na(Sal$Name)) # are there any NAs?
 ```
 
-## Example of Cleaning:
+# Recoding Variables
+
+## Example of Recoding: base R
 
 For example, let's say gender was coded as Male, M, m, Female, F, f.  Using Excel to find all of these would be a matter of filtering and changing all by hand or using if statements.
 
 In R, you can simply do something like:
 
-```
+```{r, eval = FALSE}
 data$gender[data$gender %in% 
     c("Male", "M", "m")] <- "Male"
 ```
 
-## Example of Cleaning:
+## Example of Recoding with `recode`: `car` package
 
 You can also `recode` a vector:
 
 ```{r}
-library(car)
-x = rep(c("Male", "M", "m", "f", "Female", "female" ), each = 3)
+library(car, quietly = TRUE)
+x = rep(c("Male", "M", "m", "f", "Female", "female" ), 
+        each = 3)
 car::recode(x, "c('m', 'M', 'male') = 'Male';
             c('f', 'F', 'female') = 'Female';")
 ```
 
-## Example of Cleaning:
+## Example of Recoding with `revalue`: `plyr`
 
 You can also `revalue` a vector with the `revalue` command
 
@@ -174,29 +194,141 @@ plyr::revalue(x, c("M" = "Male", "m" = "Male",
                    "f" = "Female", "female" = "Female"))
 ```
 
-## Example of Cleaning:
+## Example of Cleaning: more complicated
 
 Sometimes though, it's not so simple.  That's where functions that find patterns come in very useful.
 
 ```{r gender, echo=FALSE}
-set.seed(4)
-gender <- sample(c("Male", "mAle", "MaLe", "M", "MALE", "Ma", "FeMAle", "F", "Woman", "Man", "Fm", "FEMALE"), 1000, replace =TRUE)
+set.seed(4) # random sample below - make sure same every time
+gender <- sample(c("Male", "mAle", "MaLe", "M", "MALE", "Ma", "FeMAle", "F", "Woman", "Man", "Fm", "FEMALE"), 1000, replace = TRUE)
 ```
 
 ```{r gentab}
 table(gender)
 ```
 
-## Find/Replace and Regular Expressions
+# String functions
+
+## Pasting strings with `paste` and `paste0`
+
+Paste can be very useful for joining vectors together:
+
+```{r Paste}
+paste("Visit", 1:5, sep = "_")
+paste("Visit", 1:5, sep = "_", collapse = " ")
+paste("To", "is going be the ", "we go to the store!", sep = "day ")
+# and paste0 can be even simpler see ?paste0 
+paste0("Visit",1:5)
+```
+
+## Paste Depicting How Collapse Works
+
+```{r Paste2}
+paste(1:5)
+paste(1:5, collapse = " ")
+```
+
+## Useful String Functions
+
+Useful String functions
+
+* `toupper()`, `tolower()` - uppercase or lowercase your data:
+* `str_trim()` (in the `stringr` package) or `trimws` in base 
+    - will trim whitespace
+* `nchar` - get the number of characters in a string
+* `paste()` - paste strings together with a space 
+* `paste0` - paste strings together with no space as default
+
+
+## The `stringr` package
+
+Like `dplyr`, the `stringr` package:
+
+* Makes some things more intuitive
+* Is different than base R
+* Is used on forums for answers
+* Has a standard format for most functions
+    * the first argument is a string like first argument is a `data.frame` in `dplyr`
+
+
+
+## Splitting/Find/Replace and Regular Expressions
 
 * R can do much more than find exact matches for a whole string
 * Like Perl and other languages, it can use regular expressions.
 * What are regular expressions?
-* Ways to search for specific strings 
-* Can be very complicated or simple
-* Highly Useful
+    * Ways to search for specific strings 
+    * Can be very complicated or simple
+    * Highly Useful - think "Find" on steroids
 
-## 'Find' functions
+
+## A bit on Regular Expressions
+
+* http://www.regular-expressions.info/reference.html
+* They can use to match a large number of strings in one statement
+* `.` matches any single character
+* `*` means repeat as many (even if 0) more times the last character
+* `?` makes the last thing optional
+* `^` matches start of vector `^a` - starts with "a"
+* `$` matches end of vector `b$` - ends with "b"
+
+# Splitting Strings
+
+## Substringing
+
+Very similar:
+
+Base R
+
+* `substr(x, start, stop)` - substrings from position start to position stop
+* `strsplit(x, split)` - splits strings up - returns list!
+
+`stringr`
+
+* `str_sub(x, start, end)` - substrings from position start to position end
+* `str_split(string, pattern)` - splits strings up - returns list!
+
+
+## Splitting String: base R
+
+In base R, `strsplit` splits a vector on a string into a list
+```{r strsplit}
+x <- c("I really", "like writing", "R code programs")
+y <- strsplit(x, split = " ") # returns a list
+y
+```
+
+## Splitting String: `stringr`
+
+`stringr::str_split` do the same thing:
+
+```{r str_split}
+library(stringr)
+y2 <- str_split(x, " ") # returns a list
+y2
+```
+
+## Using a fixed expression
+
+One example case is when you want to split on a period "`.`".  In regular expressions `.` means **ANY** character, so
+
+```{r}
+str_split("I.like.strings", ".")
+str_split("I.like.strings", fixed("."))
+```
+
+## Let's extract from `y`
+
+```{r stsplit2}
+suppressPackageStartupMessages(library(dplyr)) # must be loaded AFTER plyr
+y[[2]]
+sapply(y, dplyr::first) # on the fly
+sapply(y, nth, 2) # on the fly
+sapply(y, last) # on the fly
+```
+
+
+## 'Find' functions: base R
 
 `grep`: `grep`, `grepl`, `regexpr` and `gregexpr` search for matches to argument pattern within each element of a character vector: they differ in the format of and amount of detail in the results. 
 
@@ -208,54 +340,131 @@ table(gender)
 
 * If fixed=TRUE, it will do exact matching for the phrase anywhere in the vector (regular find)
 
-## 'Find' functions
+
+## 'Find' functions: `stringr`
+
+`str_detect`, `str_subset`, `str_replace`, and `str_replace_all` search for matches to argument pattern within each element of a character vector: they differ in the format of and amount of detail in the results. 
+
+* `str_detect` - returns `TRUE` if `pattern` is found
+* `str_subset` - returns only the strings which pattern were detected
+    * convenient wrapper around `x[str_detect(x, pattern)]`
+* `str_extract` - returns only strings which pattern were detected, but ONLY the pattern
+* `str_replace` - replaces `pattern` with `replacement` the first time
+* `str_replace_all` - replaces `pattern` with `replacement` as many times matched
+
+## 'Find' functions: stringr compared to base R
+
+Base R does not use these functions.  Here is a "translator" of the `stringr` function to base R functions
+
+* `str_detect` - similar to `grepl` (return logical)
+* `grep(value = FALSE)` is similar to `which(str_detect())`
+* `str_subset` - similar to `grep(value = TRUE)` - return value of matched
+* `str_replace` - similar to `sub` - replace one time 
+* `str_replace_all` - similar to `gsub` - replace many times
+
+## Let's look at modifier for `stringr`
+
+`?modifiers`
+
+* `fixed` - match everything exactly
+* `regexp` - default - uses **reg**ular **exp**ressions
+* `ignore_case` is an option to not have to use `tolower`
+
+
+## Important Comparisons
+
+Base R:
+
+* Argument order is `(pattern, x)`
+* Uses option `(fixed = TRUE)`
+
+`stringr`
+
+* Argument order is `(string, pattern)` aka `(x, pattern)`
+* Uses function `fixed(pattern)`
+
+
+
+## 'Find' functions: Finding Indices
+
+These are the indices where the pattern match occurs:
 
 ```{r RawlMatch}
 grep("Rawlings",Sal$Name)
+which(grepl("Rawlings", Sal$Name))
+which(str_detect(Sal$Name, "Rawlings"))
 ```
 
-These are the indices/elements where the pattern match occurs
+## 'Find' functions: Finding Logicals
 
-`grep()` returns something similar to which() on a logical statement
+These are the indices where the pattern match occurs:
 
-## 'Find' functions {.smaller}
+```{r RawlMatch_log}
+head(grepl("Rawlings",Sal$Name))
+head(str_detect(Sal$Name, "Rawlings"))
+```
+
+
+## 'Find' functions: finding values, base R {.smaller}
 
 ```{r grepl}
-grep("Rawlings",Sal$Name)
 grep("Rawlings",Sal$Name,value=TRUE)
 Sal[grep("Rawlings",Sal$Name),]
 ```
 
-## `grep()` Options
-```{r greppers}
-head(grep("Tajhgh",Sal$Name, value=TRUE))
-grep("Jaffe",Sal$Name)
-length(grep("Jaffe",Sal$Name))
+## 'Find' functions: finding values, `stringr` and `dplyr` {.smaller}
+
+```{r ggrep}
+str_subset(Sal$Name, "Rawlings")
+Sal %>% filter(str_detect(Name, "Rawlings"))
 ```
 
-## A bit on Regular Expressions
+## Showing differnce in `str_extract`
 
-* http://www.regular-expressions.info/reference.html
-* They can use to match a large number of strings in one statement
-* `.` matches any single character
-* `*` means repeat as many (even if 0) more times the last character
-* `?` makes the last thing optional
+`str_extract` extracts just the matched string
+
+```{r ggrep2}
+ss = str_extract(Sal$Name, "Rawling")
+head(ss)
+ss[ !is.na(ss)]
+```
+
+## Showing differnce in `str_extract` and  `str_extract_all`
+
+`str_extract_all` extracts all the matched strings
+
+```{r }
+head(str_extract(Sal$AgencyID, "\\d"))
+head(str_extract_all(Sal$AgencyID, "\\d"), 2)
+```
+
+
 
 ## Using Regular Expressions
 * Look for any name that starts with:
     * Payne at the beginning, 
     * Leonard and then an S
-    * Spence then a capital C
-  
+    * Spence then capital C
+
 ```{r grepstar}
-grep("Payne.*", x=Sal$Name, value=TRUE)
+head(grep("^Payne.*", x = Sal$Name, value = TRUE), 3)
+```
+
+```{r grepstar2}
+head(grep("Leonard.?S", x = Sal$Name, value = TRUE))
+head(grep("Spence.*C.*", x = Sal$Name, value = TRUE))
 ```
 
 
 
-```{r grepstar2}
-grep("Leonard.?S", x=Sal$Name, value=TRUE)
-grep("Spence.*C.*", x=Sal$Name, value=TRUE)
+## Using Regular Expressions: `stringr`
+```{r grepstar_stringr}
+head(str_subset( Sal$Name, "^Payne.*"), 3)
+```
+
+```{r grepstar2_stringr}
+head(str_subset( Sal$Name, "Leonard.?S"))
+head(str_subset( Sal$Name, "Spence.*C.*"))
 ```
 
 ## Replace
@@ -275,197 +484,40 @@ order(c("1", "2", "10"))
 
 So we must change the annual pay into a numeric:
 ```{r destringSal}
+head(Sal$AnnualSalary, 4)
 head(as.numeric(Sal$AnnualSalary), 4)
 ```
 
-R didn't like the $ so it thought turned them all to `NA`.
+R didn't like the `$` so it thought turned them all to `NA`.
 
-`sub()` and `gsub()` can do the replacing part.
+`sub()` and `gsub()` can do the replacing part in base R.
 
 ## Replacing and subbing {.smaller}
 
-Now we can replace the `$` with nothing (used fixed=TRUE because $ means something in regular expressions):
+Now we can replace the `$` with nothing (used `fixed=TRUE` because `$` means ending):
 
 ```{r orderSal}
-Sal$AnnualSalary <- as.numeric(gsub(pattern="$", replacement="", 
+Sal$AnnualSalary <- as.numeric(gsub(pattern = "$", replacement="", 
                               Sal$AnnualSalary, fixed=TRUE))
-Sal <- Sal[order(Sal$AnnualSalary,decreasing=TRUE), ] # use negative to sort descending
+Sal <- Sal[order(Sal$AnnualSalary, decreasing=TRUE), ] 
 Sal[1:5, c("Name", "AnnualSalary", "JobTitle")]
 ```
 
-## Useful String Functions
+## Replacing and subbing: `stringr` {.smaller}
 
-Useful String functions
-
-* `toupper()`, `tolower()` - uppercase or lowercase your data:
-* `str_trim()` (in the `stringr` package) - will trim whitespace
-* `nchar` - get the number of characters in a string
-* `substr(x, start, stop)` - substrings from position start to position stop
-* `strsplit(x, split)` - splits strings up - returns list!
-* `paste()` - paste strings together - look at `?paste`
-
-## Paste
-
-Paste can be very useful for joining vectors together:
-
-```{r Paste}
-paste("Visit", 1:5, sep="_")
-paste("Visit", 1:5, sep="_", collapse=" ")
-paste("To", "is going be the ", "we go to the store!", sep="day ")
-# and paste0 can be even simpler see ?paste0 
-paste0("Visit",1:5)
+We can do the same thing (with 2 piping operations!) in dplyr
+```{r orderSal_stringr}
+dplyr_sal = Sal
+dplyr_sal = dplyr_sal %>% mutate( 
+  AnnualSalary = AnnualSalary %>%
+    str_replace(
+      fixed("$"), 
+      "") %>%
+    as.numeric) %>%
+  arrange(desc(AnnualSalary))
+check_Sal = Sal
+rownames(check_Sal) = NULL
+all.equal(check_Sal, dplyr_sal)
 ```
 
-
-
-```{r Paste2}
-paste(1:5, letters[1:5], sep="_")
-paste(6:10, 11:15, 2000:2005, sep="/")
-paste(paste("x",1:5,sep=""),collapse="+")
-```
-
-## Strsplit
-
-```{r strsplit}
-x <- c("I really", "like writing", "R code")
-y <- strsplit(x, split=" ")
-y[[2]]
-sapply(y, "[", 1) # on the fly
-sapply(y, "[", 2) # on the fly
-```
-
-## Data Merging/Append
-
-* Merging - joining data sets together - usually on key variables, usually "id"
-* `merge()` is the most common way to do this with data sets
-* `rbind`/`cbind` - row/column bind, respectively
-    * `rbind` is the equivalent of "appending" in Stata or "setting" in SAS
-    * `cbind` allows you to add columns in addition to the previous ways
-* `reshape2` package also has a lot of information about different ways to reshape data (wide to long, etc) - but has a different (and sometimes more intuitive syntax)
-* `t()` is a function that will transpose the data
-
-## Merging {.smaller}
-```{r merging}
-base <- data.frame(id=1:10, Age= seq(55,60, length=10))
-base[1:2,]
-visits <- data.frame(id=rep(1:8, 3), visit= rep(1:3, 8),
-                    Outcome= seq(10,50, length=24))
-visits[1:2,]
-```
-
-
-
-```{r merging2}
-merged.data <- merge(base, visits, by="id")
-merged.data[1:5,]
-dim(merged.data)
-```
-
-
-
-```{r mergeall}
-all.data <- merge(base, visits, by="id", all=TRUE)
-tail(all.data)
-dim(all.data)
-```
-
-## Aside: Dates {.smaller}
-
-You can convert date-like strings in the `Date` class (http://www.statmethods.net/input/dates.html for more info)
-
-```{r date}
-circ = read.csv("http://www.aejaffe.com/winterR_2016/data/Charm_City_Circulator_Ridership.csv",
-                as.is=TRUE)
-head(sort(circ$date))
-circ$date <- as.Date(circ$date, "%m/%d/%Y") # creating a date for sorting
-head(circ$date)
-head(sort(circ$date))
-```
-
-## Data Reshaping
-
-Disclaimer: the `reshape` command in R is not remarkably intuitive.
-
-* Wide - multiple measurements are variables / columns so that the data gets wider with more measurements
-* Long - multiple measurements are rows so data gets longer with more measurements
-* One example would be many ids with multiple visits
-
-```{r longwide, echo=FALSE}
-wide <- data.frame(id=1, visit1="Good", visit2="Good", visit3 = "Bad")
-long <- data.frame(id=rep(1, 3), visit=c(1, 2, 3), Outcome=c("Good", "Good", "Bad"))
-```
-
-## Example of Long/Wide
-```{r showlong, echo=TRUE}
-head(wide)
-head(long)
-```
-
-## Data Reshaping
-
-* Good resource: http://www.ats.ucla.edu/stat/r/faq/reshape.htm
-
-```{r reshape}
-head(Indometh) # this is long
-```
-
-## Data Reshaping {.smaller}
-```{r reshape2}
-wide <- reshape(Indometh, v.names = "conc", idvar = "Subject",
-                timevar = "time", direction = "wide")
-head(wide)
-```
-
-## Data Reshaping {.smaller}
-
-```{r reshape3}
-dim(Indometh)
-wide
-```
-
-## Data Reshaping
-
-* If you've reshaped a data set - to get it back, just reshape it again
-
-```{r rewide}
-reshape(wide, direction = "long")[1:10,]
-```
-
-Note the row name change
-
-## Data Reshaping - A Better Example {.smaller}
-
-```{r xlsx,echo=FALSE, results='hide'}
-library(xlsx,verbose=FALSE)
-```
-
-```{r TB}
-destfile = tempfile(fileext = ".xlsx")
-download.file("http://www.aejaffe.com/winterR_2016/data/indicator_estimatedincidencealltbper100000.xlsx", destfile = destfile)
-TB <- read.xlsx(file = destfile,
-                sheetName = "Data")
-head(TB, 1)
-TB$NA. <- NULL
-head(TB, 1)
-```
-
-## Data Reshaping - A Better Example {.smaller}
-
-```{r TB.hd}
-colnames(TB) <- c("Country", paste("Year", 
-                          1990:2007, sep="."))
-head(TB,1)
-```
-
-## Data Reshaping - More is better! {.smaller}
-
-```{r TB.long}
-TB.long <- reshape(TB, idvar="Country", 
-            v.names="Cases", times=1990:2007, 
-                   direction="long", timevar="Year", 
-                   varying = paste("Year", 1990:2007, sep="."))
-head(TB.long, 4)
-rownames(TB.long) <- NULL
-head(TB.long, 4)
-```
 
