--- a/Manipulating_Data_in_R/lecture/Manipulating_Data_in_R.Rmd
+++ b/Manipulating_Data_in_R/lecture/Manipulating_Data_in_R.Rmd
@@ -17,9 +17,10 @@ opts_chunk$set(comment = "")
 
 In this module, we will show you how to:
 
-1. Perform operations by a grouping variable
-2. Reshaping data from long (tall) to wide (fat)
-3. Reshaping data from wide (fat) to long (tall)
+1. Reshaping data from long (tall) to wide (fat)
+2. Reshaping data from wide (fat) to long (tall)
+3. Merging Data
+4. Perform operations by a grouping variable
 
 ## Setup
 
@@ -150,6 +151,73 @@ head(wide)
 ```
 
 
+# Merging Data
+## Data Merging/Append in Base R
+
+* Merging - joining data sets together - usually on key variables, usually "id"
+* `merge()` is the most common way to do this with data sets
+* `rbind`/`cbind` - row/column bind, respectively
+    * `rbind` is the equivalent of "appending" in Stata or "setting" in SAS
+    * `cbind` allows you to add columns in addition to the previous ways
+* `t()` is a function that will transpose the data
+
+## Merging {.smaller}
+```{r merging}
+base <- data.frame(id = 1:10, Age= seq(55,60, length=10))
+base[1:2,]
+visits <- data.frame(id = rep(1:8, 3), visit= rep(1:3, 8),
+                    Outcome = seq(10,50, length=24))
+visits[1:2,]
+```
+
+
+
+```{r merging2}
+merged.data <- merge(base, visits, by="id")
+merged.data[1:5,]
+dim(merged.data)
+```
+
+
+
+```{r mergeall}
+all.data <- merge(base, visits, by="id", all=TRUE)
+tail(all.data)
+dim(all.data)
+```
+
+## Joining in `dplyr`
+
+
+* `?join` - see different types of joining for `dplyr`
+* Let's look at https://www.rstudio.com/wp-content/uploads/2015/02/data-wrangling-cheatsheet.pdf
+
+## Left Join
+
+```{r left_join}
+lj = left_join(base, visits)
+dim(lj)
+tail(lj)
+```
+
+## Right Join
+
+```{r right_join}
+rj = right_join(base, visits)
+dim(rj)
+tail(rj)
+```
+
+## Full Join
+
+```{r full_join}
+fj = full_join(base, visits)
+dim(fj)
+tail(fj)
+```
+
+
+
 # Perform Operations By Groups of Variables
 
 ## Perform Operations By Groups: base R
@@ -243,3 +311,5 @@ ggplot(aes(x = date, y = Average, colour = line),
            data = wide) + geom_smooth(se = FALSE) + 
   geom_point(size = .5)
 ```
+
+
